--- a/index.html
+++ b/index.html
@@ -148,9 +148,11 @@
                 </div>
 
                 <!-- Script -->
-                <!-- <script src="./js/circleBar.js"></script> -->
+                <script src="./js/circleBar.js"></script>
           </div>
         </div>
+        <div style="height: 1000px;"></div>
     </section>
+    
 </body>
 </html>
