circleBar finished, todo added, new futures is under work

--- a/index.html
+++ b/index.html
@@ -148,10 +148,9 @@
                 </div>
 
                 <!-- Script -->
-                <script src="./js/circleBar.js"></script>
+                <!-- <script src="./js/circleBar.js"></script> -->
           </div>
         </div>
-        <div style="height: 1000px;"></div>
     </section>
     
 </body>
