back to rocket scroll and click problem not yet solved

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
             <a href="#about-me" id="explore">Explore</a>
             <img src="./img/parallax/backMountain.png" alt="back mountain" id="backMountain">
         </section>
-        <script src="./js/parallax.js"></script>
     </header>
+    <!-- parallax js -->
+    <script src="./js/parallax.js" defer></script>
     
     <!-- Back to btn -->
     <section class="back-to" >
@@ -60,8 +61,9 @@
                 <i class="fas fa-space-shuttle to-bottom" id="rocket"></i>
             </a>
         </div>
-        <script src="./js/backTo.js"></script>
     </section>
+    <!-- backTo js  -->
+    <script src="./js/backTo.js" defer></script>
 
     <!-- About me -->
     <section>
@@ -74,7 +76,7 @@
                  and with desire to create a website (Honestly,first I'd wanted to hack ^_^` ) ... .
                 After some years, my passion brought me here, and now I can create websites. 
             </div>
-            <div class="about-me__text2">
+            <div class="about-me__text2" id="exploreText">
                 explore
             </div>
             <img src="./img/separatorBlack1.png" alt="seperator" class="seperator">
@@ -170,11 +172,11 @@
                     </div>    
                 </div>
 
-                <!-- Script -->
-                <!-- <script src="./js/circleBar.js"></script> -->
           </div>
         </div>
     </section>
+    <!-- CircleBar.js -->
+    <!-- <script src="./js/circleBar.js" defer></script> -->
 
     <!-- Contact me -->
     <section>
