Alhamdulillah, removed onclick event, solved double rotate problem, added deleteMe.md to recognize how and what event occurs

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
     </header>
     <!-- parallax js -->
-    <script src="./js/parallax.js" defer></script>
+    <!-- <script src="./js/parallax.js" defer></script> -->
     
     <!-- Back to btn -->
     <section class="back-to" >
