--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <!-- Styles -->
     <link rel="stylesheet" href="./styles/style.css">
     <!-- forse page position to top at page refresh -->
-    <!-- <script>
+    <script>
         history.scrollRestoration = "manual";
         document.onbeforeunload = function () {
             window.scrollTo(0, 0);
         }
-    </script> -->
+    </script>
 </head>
 <body>
     <header>
@@ -58,7 +58,7 @@
         </section>
     </header>
     <!-- parallax js -->
-    <!-- <script src="./js/parallax.js" defer></script> -->
+    <script src="./js/parallax.js" defer></script>
     
     <!-- Back to btn -->
     <section class="back-to" >
@@ -183,13 +183,13 @@
         </div>
     </section>
     <!-- CircleBar.js -->
-    <!-- <script src="./js/circleBar.js" defer></script> -->
+    <script src="./js/circleBar.js" defer></script>
 
     <!-- Contact me -->
     <section>
         <div class="contact-me">
             <div class="sections-header">
-                <h2> Skills</h2>
+                <h2>Contact</h2>
             </div>
             <img src="./img/separatorBlack1.png" alt="seperator" class="seperator">
             <form class="contact-form" id="contact-me">
@@ -231,6 +231,38 @@
     <!-- Footer -->
     <footer>
         <div class="footer" id="footer">
+            <div class="social-media-container">
+                <div class="tooltip" id="telegram">
+                    <a href="#">
+                        <i class="fab fa-telegram-plane"></i>
+                        <span class="tooltiptext">Telegram</span>
+                    </a>
+                </div>
+                <div class="tooltip" id="instagram">
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                        <span class="tooltiptext">Instagram</span>
+                    </a>
+                </div>
+                <div class="tooltip" id="linkedin">
+                    <a href="#">
+                        <i class="fab fa-linkedin"></i>
+                        <span class="tooltiptext">LinkedIn</span>
+                    </a>
+                </div>
+                <div class="tooltip" id="github">
+                    <a href="#">
+                        <i class="fab fa-github"></i>
+                        <span class="tooltiptext">GitHub</span>
+                    </a>
+                </div>
+                <div class="tooltip" id="discord">
+                    <a href="#">
+                        <i class="fab fa-discord"></i>
+                        <span class="tooltiptext">Discord</span>
+                    </a>
+                </div>
+            </div>
             <p>Made with <i class="fas fa-heart"></i> by <span>Abdurasul Djurayev</span></p>
         </div>
     </footer>
