--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
         </div>
     </div>
 <div id="theSite">
+    <div id="menu" class="menu"></div>
     <header>
         <!-- Navbar -->
+        
         <div class="header">
             <div class="logo-container">
                 <a href="#" id="logo"><img src="./img/logo/logo3.svg" alt="logo"></a>
             </div>
-            <nav id="menu">
+            <nav >
                 <ul class="nav">
                         <li id="nav-icon" onclick="toggleMenu();">
                             <i class="fas fa-chevron-circle-down"></i>
@@ -103,10 +105,6 @@
             <img src="./img/parallax/backMountain.png" alt="back mountain" id="backMountain">
         </section>
     </header>
-    <!-- parallax js -->
-    <script src="./js/parallax.js" ></script>
-    <!-- Menu js -->
-    <script src="./js/menu.js"></script>
 
     <!-- Back to btn -->
     <section class="back-to" >
@@ -117,8 +115,6 @@
             </a>
         </div>
     </section>
-    <!-- backTo js  -->
-    <script src="./js/backTo.js" defer></script>
 
     <!-- About me -->
     <section>
@@ -236,8 +232,6 @@
           </div>
         </div>
     </section>
-    <!-- CircleBar.js -->
-    <script src="./js/circleBar.js" defer></script>
 
     <!-- Contact me -->
     <section>
@@ -320,6 +314,16 @@
             <p>Made with <i class="fas fa-heart"></i> by <span>Abdurasul Djurayev</span></p>
         </div>
     </footer>
+
+    <!-- Scripts -->
+        <!-- parallax js -->
+        <script src="./js/parallax.js" ></script>
+        <!-- Menu js -->
+        <script src="./js/menu.js"></script>
+        <!-- backTo js  -->
+        <script src="./js/backTo.js" defer></script>
+        <!-- CircleBar.js -->
+        <script src="./js/circleBar.js" defer></script>
 </div>
 </body>
 </html>
