--- a/test.html
+++ b/test.html
@@ -27,6 +27,7 @@
             z-index: 100;
         }
         section {
+            top:0;
             width: 100%;
             height: 50vh;
             background: red;
