--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            overflow: hidden;
         }
         header {
             width: 100%;
@@ -40,7 +41,7 @@
             z-index: 100;
         }
         section {
-            top:0;
+            /* top:0; */
             width: 100%;
             height: 50vh;
             background: red;
