--- a/test.html
+++ b/test.html
@@ -15,7 +15,8 @@
         
         header {
             width: 100%;
-            min-height: 100vh;
+            min-height: 90vh;
+            height: 100%;
             max-height: 100vh;
             background: yellow;
             overflow: hidden;
