--- a/test.html
+++ b/test.html
@@ -47,6 +47,7 @@
         }
         section {
             /* top:0; */
+            padding-top: 5rem;
             overflow: hidden;
             width: 100%;
             height: 50vh;
