--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
 
     <!-- About me -->
-    <section>
+    <section class="about-me-section">
         <div class="about-me" id="about-me">
             <div class="sections-header">
                 <h2> About me</h2>
