--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
             <a href="#about-me" id="explore">Explore</a>
             <img src="./img/parallax/backMountain.png" alt="back mountain" id="backMountain">
         </section>
+
+        <div id="transparent-bottom"></div>
     </header>
 
     <!-- Back to btn -->
