--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </section>
 
     <!-- About me -->
-    <section class="about-me-section">
+    <section class="about-me-section" style="overflow: hidden;">
         <div class="about-me" id="about-me">
             <div class="sections-header">
                 <h2> About me</h2>
