--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <section id="home">
             <img src="./img/parallax/moon.png" alt="moon" id="moon">
             <img src="./img/parallax/stars.png" alt="stars" id="stars">
-            <img src="./img/parallax/front.png" alt="Front mountain" id="frontMountain">
+            <img src="./img/parallax/front.png" alt="Front mountain" id="frontMountain" style="overflow:hidden">
             <img src="./img/parallax/midMoundain.png" alt="Mid mountain" id="midMountain">
             <h2 id="AbdurasulDjurayev" data-text="Abdurasul Djurayev"> Abdurasul Djurayev</h2>
             <a href="#about-me" id="explore">Explore</a>
@@ -119,7 +119,7 @@
     </section>
 
     <!-- About me -->
-    <section class="about-me-section" style="overflow: hidden;">
+    <section class="about-me-section">
         <div class="about-me" id="about-me">
             <div class="sections-header">
                 <h2> About me</h2>
