--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
             <a href="#about-me" id="explore">Explore</a>
             <img src="./img/parallax/backMountain.png" alt="back mountain" id="backMountain">
         </section>
-
-        <div id="transparent-bottom"></div>
+        <div id="transparent-bottom"></div>        
     </header>
 
     <!-- Back to btn -->
@@ -119,7 +118,7 @@
     </section>
 
     <!-- About me -->
-    <section class="about-me-section">
+    <section >
         <div class="about-me" id="about-me">
             <div class="sections-header">
                 <h2> About me</h2>
