--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 <div id="theSite">
     <div id="menu" class="menu"></div>
-    <header id="landing-header">
+    <header >
         <!-- Navbar -->
         <div class="header">
             <div class="logo-container">
